dh_python: Removed this deprecated and unused command. Closes: #717374 (Thanks, Luca Falavigna)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20130631) UNRELEASED; urgency=low
+
+  * dh_python: Removed this deprecated and unused command.
+    Closes: #717374
+    (Thanks, Luca Falavigna)
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 19 Jul 2013 18:47:27 -0400
+
 debhelper (9.20130630) unstable; urgency=low
 
   * perl_build: Use -- long option names, for compatibility with
