Type fixes. Closes: #719216

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (9.20130631) UNRELEASED; urgency=low
   * dh_python: Removed this deprecated and unused command.
     Closes: #717374
     (Thanks, Luca Falavigna)
+  * Type fixes. Closes: #719216
 
  -- Joey Hess <joeyh@debian.org>  Fri, 19 Jul 2013 18:47:27 -0400
 
