dh_installinit: Fix a longstanding accidental behavior that caused a file named debian/package to be installed as the init script. Only fixed in v10 since packages might depend on this behavior. Closes: #719359

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -532,6 +532,11 @@ This compatibility level is still open for development; use with caution.
 
 Changes from v9 are:
 
+=item -
+
+B<dh_installinit> will no longer install a file named debian/I<package>
+as an init script.
+
 =over 8
 
 =item -
