--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ debhelper (9.20130631) UNRELEASED; urgency=low
     Closes: #717374
     (Thanks, Luca Falavigna)
   * Type fixes. Closes: #719216
+  * dh_installinit: Fix a longstanding accidental behavior that caused
+    a file named debian/package to be installed as the init script.
+    Only fixed in v10 since packages might depend on this behavior.
+    Closes: #719359
 
  -- Joey Hess <joeyh@debian.org>  Fri, 19 Jul 2013 18:47:27 -0400
 
