--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (9.20130631) UNRELEASED; urgency=low
     a file named debian/package to be installed as the init script.
     Only fixed in v10 since packages might depend on this behavior.
     Closes: #719359
+  * dh_install, dh_installdocs, dh_clean: Fix uses of find -exec
+    which cause it to ignore exit status of the commands run.
+    Closes: 719598
 
  -- Joey Hess <joeyh@debian.org>  Fri, 19 Jul 2013 18:47:27 -0400
 
