--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20130631) UNRELEASED; urgency=low
+debhelper (9.20130720) unstable; urgency=low
 
   * dh_python: Removed this deprecated and unused command.
     Closes: #717374
@@ -16,7 +16,7 @@ debhelper (9.20130631) UNRELEASED; urgency=low
     the makefile spaghetti has problems later on when run with -n,
     but not that the called target didn't exist. Closes: #718121
 
- -- Joey Hess <joeyh@debian.org>  Fri, 19 Jul 2013 18:47:27 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 20 Aug 2013 12:46:25 -0400
 
 debhelper (9.20130630) unstable; urgency=low
 
