dh: Call dh_installxfonts after dh_link, so that it will notice fonts installed via symlinks. Closes: #721264

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130721) UNRELEASED; urgency=low
+
+  * dh: Call dh_installxfonts after dh_link, so that it will
+    notice fonts installed via symlinks. Closes: #721264
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 20 Aug 2013 12:46:25 -0400
+
 debhelper (9.20130720) unstable; urgency=low
 
   * dh_python: Removed this deprecated and unused command.
