--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20130721) UNRELEASED; urgency=low
 
   * dh: Call dh_installxfonts after dh_link, so that it will
     notice fonts installed via symlinks. Closes: #721264
+  * Fix FTBFS with perl 5.18. Closes: #722501
 
  -- Joey Hess <joeyh@debian.org>  Tue, 20 Aug 2013 12:46:25 -0400
 
