--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20130721) UNRELEASED; urgency=low
+debhelper (9.20130921) unstable; urgency=low
 
   * dh: Call dh_installxfonts after dh_link, so that it will
     notice fonts installed via symlinks. Closes: #721264
@@ -6,7 +6,7 @@ debhelper (9.20130721) UNRELEASED; urgency=low
   * dh_installchangelogs: Add changelog.md to the list of common
     changelog filenames.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 20 Aug 2013 12:46:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 21 Sep 2013 13:16:34 -0400
 
 debhelper (9.20130720) unstable; urgency=low
 
