dh_installchangelogs: Avoid installing binNMU changelog file in --no-act mode. Closes: #726930

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130922) UNRELEASED; urgency=low
+
+  * dh_installchangelogs: Avoid installing binNMU changelog file
+    in --no-act mode. Closes: #726930
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 Oct 2013 19:18:44 -0400
+
 debhelper (9.20130921) unstable; urgency=low
 
   * dh: Call dh_installxfonts after dh_link, so that it will
