Update dh_installemacsen for emacsen-common 2.0.
Update dh_installemacsen and related scripts to follow
/usr/share/doc/emacsen-common/debian-emacs-policy.gz as of
emacsen-common package version 2.0.5. The changes include:

* Install debian/package.emacsen-compat into
  usr/lib/emacsen-common/packages/compat/package if present
* All maintainer scripts test for existance of
  /var/lib/emacsen-common/state/package/installed/emacsen-common as
  mandated by policy.
* Generate and install preinst maintainer script if needed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
 debhelper (9.20130922) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Debhelper is now team maintained. There is a
     debhelper-devel@lists.alioth.debian.org mailing list which
     maintainers of other dh_ commands are encouraged to join also.
   * dh_installchangelogs: Avoid installing binNMU changelog file
     in --no-act mode. Closes: #726930
+
+  [ Modestas Vainius ]
+  * Update dh_installemacsen and related scripts to follow emacs
+    policy v2.0 (as of emacsen-common 2.0.5).
 
  -- Joey Hess <joeyh@debian.org>  Sun, 20 Oct 2013 19:18:44 -0400
 
