team list being created

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 debhelper (9.20130922) UNRELEASED; urgency=low
 
+  * Debhelper is now team maintained. There is a
+    debhelper-devel@lists.alioth.debian.org mailing list which
+    maintainers of other dh_ commands are encouraged to join also.
   * dh_installchangelogs: Avoid installing binNMU changelog file
     in --no-act mode. Closes: #726930
 
