Close the bug (#728620) fixed by previous commit.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,7 @@ debhelper (9.20130922) UNRELEASED; urgency=low
 
   [ Modestas Vainius ]
   * Update dh_installemacsen and related scripts to follow emacs
-    policy v2.0 (as of emacsen-common 2.0.5).
+    policy v2.0 (as of emacsen-common 2.0.5). Closes: #728620
 
  -- Joey Hess <joeyh@debian.org>  Sun, 20 Oct 2013 19:18:44 -0400
 
