--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-debhelper (9.20130922) UNRELEASED; urgency=low
+debhelper (9.20131104) unstable; urgency=low
 
   [ Joey Hess ]
-  * Debhelper is now team maintained. There is a
-    debhelper-devel@lists.alioth.debian.org mailing list which
-    maintainers of other dh_ commands are encouraged to join also.
+  * Debhelper is now team maintained. There is a new
+    debhelper-devel mailing list which maintainers of other dh_
+    commands are encouraged to join also.
+    <https://lists.alioth.debian.org/mailman/listinfo/debhelper-devel>
   * dh_installchangelogs: Avoid installing binNMU changelog file
     in --no-act mode. Closes: #726930
 
@@ -11,7 +12,7 @@ debhelper (9.20130922) UNRELEASED; urgency=low
   * Update dh_installemacsen and related scripts to follow emacs
     policy v2.0 (as of emacsen-common 2.0.5). Closes: #728620
 
- -- Joey Hess <joeyh@debian.org>  Sun, 20 Oct 2013 19:18:44 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 04 Nov 2013 15:34:21 -0400
 
 debhelper (9.20130921) unstable; urgency=low
 
