--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20131105) UNRELEASED; urgency=low
+
+  * Fix (horrible) make output parsing code to work with make 4.0.
+    Closes: #728800 Thanks, Julien Pinon
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 05 Nov 2013 22:15:59 -0400
+
 debhelper (9.20131104) unstable; urgency=low
 
   [ Joey Hess ]
