releasing package debhelper version 9.20131110

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20131106) UNRELEASED; urgency=low
+debhelper (9.20131110) unstable; urgency=low
 
   * dh_installinit: Revert changes that added versioned dependency on
     sysv-rc to support upstart, which later grew to a versioned dependency
@@ -10,7 +10,7 @@ debhelper (9.20131106) UNRELEASED; urgency=low
     need to find a properly designed solution, which this was not.
     Closes: #729248
 
- -- Joey Hess <joeyh@debian.org>  Sun, 10 Nov 2013 15:17:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 10 Nov 2013 15:23:29 -0400
 
 debhelper (9.20131105) unstable; urgency=low
 
