dh_compress: Exclude several more compressed file formats. Closes: #730483

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20131111) UNRELEASED; urgency=low
+
+  * dh_compress: Exclude several more compressed file formats.
+    Closes: #730483
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Nov 2013 12:51:11 -0400
+
 debhelper (9.20131110) unstable; urgency=low
 
   * dh_installinit: Revert changes that added versioned dependency on
