--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (9.20131111) UNRELEASED; urgency=low
+debhelper (9.20131127) unstable; urgency=low
 
   * dh_compress: Exclude several more compressed file formats.
     Closes: #730483
 
- -- Joey Hess <joeyh@debian.org>  Mon, 25 Nov 2013 12:51:11 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 27 Nov 2013 19:19:41 -0400
 
 debhelper (9.20131110) unstable; urgency=low
 
