--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20131128) UNRELEASED; urgency=low
+
+  * cmake: Configure with -DCMAKE_BUILD_TYPE=None
+    Closes: #701233
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 05 Dec 2013 14:04:01 -0400
+
 debhelper (9.20131127) unstable; urgency=low
 
   * dh_compress: Exclude several more compressed file formats.
