releasing package debhelper version 9.20131213

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20131128) UNRELEASED; urgency=low
+debhelper (9.20131213) unstable; urgency=low
 
   [ Joey Hess ]
   * cmake: Configure with -DCMAKE_BUILD_TYPE=None
@@ -9,7 +9,7 @@ debhelper (9.20131128) UNRELEASED; urgency=low
     symlink_to_dir and dir_to_symlink that were added in dpkg 1.17.2.
     Closes: #731723
 
- -- Joey Hess <joeyh@debian.org>  Thu, 05 Dec 2013 14:04:01 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Dec 2013 14:46:26 -0400
 
 debhelper (9.20131127) unstable; urgency=low
 
