--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (9.20131227) unstable; urgency=medium
+
+  [ Guillem Jover ]
+  * dh_shlibdeps: Use new dpkg-shlibdeps -l option instead of LD_LIBRARY_PATH
+    Closes: #717505
+  * Depend on dpkg-dev (>= 1.17.0), the version that introduced
+    dpkg-shlibdeps -l option.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Dec 2013 21:52:53 -0400
+
 debhelper (9.20131213) unstable; urgency=low
 
   [ Joey Hess ]
