--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20131228) UNRELEASED; urgency=medium
+
+  * dh_compress: Avoid compressing .map files, which may be html
+    usemaps. Closes: #704443
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
+
 debhelper (9.20131227) unstable; urgency=medium
 
   [ Guillem Jover ]
