dh_installdocs: When doc dirs are symlinked make the dependency versioned per policy. Closes: #676777

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20131228) UNRELEASED; urgency=medium
 
   * dh_compress: Avoid compressing .map files, which may be html
     usemaps. Closes: #704443
+  * dh_installdocs: When doc dirs are symlinked make the dependency
+    versioned per policy. Closes: #676777
 
  -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
 
