dh: Reject unknown parameters that are not dashed command-line parameters intended to be passed on to debhelper commands. Closes: #737635
Note that dh build -n foo bar will pass -nfoobar to the debhelper command.
I did not try to change that, as it would add significant complication.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (9.20131228) UNRELEASED; urgency=medium
     versioned per policy. Closes: #676777
   * dh_makeshlibs: Defer propigating dpkg-gensymbols error until
     all packages have been processed. Closes: #736640
+  * dh: Reject unknown parameters that are not dashed command-line
+    parameters intended to be passed on to debhelper commands.
+    Closes: #737635
 
  -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
 
