--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ debhelper (9.20131228) UNRELEASED; urgency=medium
   * dh: Reject unknown parameters that are not dashed command-line
     parameters intended to be passed on to debhelper commands.
     Closes: #737635
+  * perl_build: Use realclean instead of distclean. Closes: #737662
 
  -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
 
