--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20131228) UNRELEASED; urgency=medium
+debhelper (9.20140210) UNRELEASED; urgency=medium
 
   * dh_compress: Avoid compressing .map files, which may be html
     usemaps. Closes: #704443
@@ -10,6 +10,8 @@ debhelper (9.20131228) UNRELEASED; urgency=medium
     parameters intended to be passed on to debhelper commands.
     Closes: #737635
   * perl_build: Use realclean instead of distclean. Closes: #737662
+  * Initial implementation of support for Build-Profiles fields.
+    Thanks, Daniel Schepler.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
 
