--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20140210) UNRELEASED; urgency=medium
+debhelper (9.20140227) unstable; urgency=medium
 
   * dh_compress: Avoid compressing .map files, which may be html
     usemaps. Closes: #704443
@@ -19,7 +19,7 @@ debhelper (9.20140210) UNRELEASED; urgency=medium
     for one package, dpkg-gencontrol may see other packages in the
     control file.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 27 Feb 2014 11:49:56 -0400
 
 debhelper (9.20131227) unstable; urgency=medium
 
