Fix breakage in no-act mode introduced in last release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20140228) UNRELEASED; urgency=medium
+
+  * Fix breakage in no-act mode introduced in last release.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 14:59:57 -0400
+
 debhelper (9.20140227) unstable; urgency=medium
 
   * dh_compress: Avoid compressing .map files, which may be html
