--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (9.20140228) UNRELEASED; urgency=medium
+debhelper (9.20140228) unstable; urgency=medium
 
   * Fix breakage in no-act mode introduced in last release.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 14:59:57 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 15:02:35 -0400
 
 debhelper (9.20140227) unstable; urgency=medium
 
