Minor typo. Closes: #741144

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20140229) UNRELEASED; urgency=medium
+
+  * Minor typo. Closes: #741144
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2014 12:39:21 -0400
+
 debhelper (9.20140228) unstable; urgency=medium
 
   * Fix breakage in no-act mode introduced in last release.
@@ -10,7 +16,7 @@ debhelper (9.20140227) unstable; urgency=medium
     usemaps. Closes: #704443
   * dh_installdocs: When doc dirs are symlinked make the dependency
     versioned per policy. Closes: #676777
-  * dh_makeshlibs: Defer propigating dpkg-gensymbols error until
+  * dh_makeshlibs: Defer propagating dpkg-gensymbols error until
     all packages have been processed. Closes: #736640
   * dh: Reject unknown parameters that are not dashed command-line
     parameters intended to be passed on to debhelper commands.
