Minor typos. Closes: #741144, #744176

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -221,7 +221,7 @@ source package tree.
 
 Enable out of source building and use the specified I<directory> as the build
 directory. If I<directory> parameter is omitted, a default build directory
-will chosen.
+will be chosen.
 
 If this option is not specified, building will be done in source by default
 unless the build system requires or prefers out of source tree building.
