--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (9.20140229) UNRELEASED; urgency=medium
 
-  * Minor typo. Closes: #741144
+  * Minor typos. Closes: #741144, #744176
 
  -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2014 12:39:21 -0400
 
