dh_installinit: Fix uninitialized value warning when --name is used.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (9.20140229) UNRELEASED; urgency=medium
 
   * Minor typos. Closes: #741144, #744176
+  * dh_installinit: Fix uninitialized value warning when --name is used.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2014 12:39:21 -0400
 
