Pass --disable-silent-rules in dh_auto_configure if DH_VERBOSE is set.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -651,8 +651,8 @@ F<preinst>, F<postrm>, F<prerm>, and F<config> scripts, etc.
 
 =item B<DH_VERBOSE>
 
-Set to B<1> to enable verbose mode. Debhelper will output every command it runs
-that modifies files on the build system.
+Set to B<1> to enable verbose mode. Debhelper will output every command it
+runs. Also enables verbose build logs for some build systems like autoconf.
 
 =item B<DH_COMPAT>
 
