--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 debhelper (9.20140229) UNRELEASED; urgency=medium
 
+  * Pass --disable-silent-rules in dh_auto_configure if DH_VERBOSE is set.
+    Closes: #751207. Thanks, Helmut Grohne.
   * Minor typos. Closes: #741144, #744176
   * dh_installinit: Fix uninitialized value warning when --name is used.
 
