--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (9.20140229) UNRELEASED; urgency=medium
+debhelper (9.20140613) unstable; urgency=medium
 
   * Pass --disable-silent-rules in dh_auto_configure if DH_VERBOSE is set.
     Closes: #751207. Thanks, Helmut Grohne.
   * Minor typos. Closes: #741144, #744176
   * dh_installinit: Fix uninitialized value warning when --name is used.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2014 12:39:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Jun 2014 11:50:09 -0400
 
 debhelper (9.20140228) unstable; urgency=medium
 
