--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 9.20120909\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2014-02-27 11:50-0400\n"
+"POT-Creation-Date: 2014-06-13 11:50-0400\n"
 "PO-Revision-Date: 2012-10-22 22:00+0100\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -620,10 +620,15 @@ msgstr "B<-B>[I<Verzeichnis>], B<--builddirectory=>[I<Verzeichnis>]"
 
 #. type: textblock
 #: debhelper.pod:222
+#, fuzzy
+#| msgid ""
+#| "Enable out of source building and use the specified I<directory> as the "
+#| "build directory. If I<directory> parameter is omitted, a default build "
+#| "directory will chosen."
 msgid ""
 "Enable out of source building and use the specified I<directory> as the "
 "build directory. If I<directory> parameter is omitted, a default build "
-"directory will chosen."
+"directory will be chosen."
 msgstr ""
 "aktiviert das Bauen aus dem Quelltext und benutzt das angegebene "
 "I<Verzeichnis>] als Bauverzeichnis. Falls der Parameter I<Verzeichnis>] "
@@ -1531,9 +1536,13 @@ msgstr "B<DH_VERBOSE>"
 
 #. type: textblock
 #: debhelper.pod:654
+#, fuzzy
+#| msgid ""
+#| "Set to B<1> to enable verbose mode. Debhelper will output every command "
+#| "it runs that modifies files on the build system."
 msgid ""
 "Set to B<1> to enable verbose mode. Debhelper will output every command it "
-"runs that modifies files on the build system."
+"runs. Also enables verbose build logs for some build systems like autoconf."
 msgstr ""
 "auf B<1> gesetzt, um Modus mit detailreicher Ausgabe zu aktivieren. "
 "Debhelper wird jeden von ihm ausgeführten Befehl ausgeben, der Dateien im "
