--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2014-02-27 11:50-0400\n"
+"POT-Creation-Date: 2014-06-13 11:50-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -449,7 +449,7 @@ msgstr ""
 msgid ""
 "Enable out of source building and use the specified I<directory> as the "
 "build directory. If I<directory> parameter is omitted, a default build "
-"directory will chosen."
+"directory will be chosen."
 msgstr ""
 
 #. type: textblock
@@ -1133,7 +1133,7 @@ msgstr ""
 #: debhelper.pod:654
 msgid ""
 "Set to B<1> to enable verbose mode. Debhelper will output every command it "
-"runs that modifies files on the build system."
+"runs. Also enables verbose build logs for some build systems like autoconf."
 msgstr ""
 
 #. type: =item
