--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -31,7 +31,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debhelper 9.20120609\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-02-27 11:50-0400\n"
+"POT-Creation-Date: 2014-06-13 11:50-0400\n"
 "PO-Revision-Date: 2012-08-20 11:17+0200\n"
 "Last-Translator: Omar Campagne <ocampagne@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -694,10 +694,15 @@ msgstr "B<-B>[I<directorio>], B<--builddirectory=>[I<directorio>]"
 
 #. type: textblock
 #: debhelper.pod:222
+#, fuzzy
+#| msgid ""
+#| "Enable out of source building and use the specified I<directory> as the "
+#| "build directory. If I<directory> parameter is omitted, a default build "
+#| "directory will chosen."
 msgid ""
 "Enable out of source building and use the specified I<directory> as the "
 "build directory. If I<directory> parameter is omitted, a default build "
-"directory will chosen."
+"directory will be chosen."
 msgstr ""
 "Activa la construcción fuera de las fuentes y utiliza el I<directorio> "
 "especificado como directorio de construcción. Se seleccionará un directorio "
@@ -1650,9 +1655,13 @@ msgstr "B<DH_VERBOSE>"
 # type: textblock
 #. type: textblock
 #: debhelper.pod:654
+#, fuzzy
+#| msgid ""
+#| "Set to B<1> to enable verbose mode. Debhelper will output every command "
+#| "it runs that modifies files on the build system."
 msgid ""
 "Set to B<1> to enable verbose mode. Debhelper will output every command it "
-"runs that modifies files on the build system."
+"runs. Also enables verbose build logs for some build systems like autoconf."
 msgstr ""
 "Defina como B<1> para activar el modo explicativo. Debhelper mostrará todas "
 "las órdenes utilizadas que modifiquen ficheros en el sistema en el que se "
