--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2014-02-27 11:50-0400\n"
+"POT-Creation-Date: 2014-06-13 11:50-0400\n"
 "PO-Revision-Date: 2012-11-03 11:13-0400\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -675,10 +675,15 @@ msgstr "B<-B>[I<répertoire>], B<--builddirectory=>[I<répertoire>]"
 
 #. type: textblock
 #: debhelper.pod:222
+#, fuzzy
+#| msgid ""
+#| "Enable out of source building and use the specified I<directory> as the "
+#| "build directory. If I<directory> parameter is omitted, a default build "
+#| "directory will chosen."
 msgid ""
 "Enable out of source building and use the specified I<directory> as the "
 "build directory. If I<directory> parameter is omitted, a default build "
-"directory will chosen."
+"directory will be chosen."
 msgstr ""
 "Permet de construire le paquet en dehors de la structure source en utilisant "
 "le I<répertoire> indiqué comme répertoire de construction. Si le paramètre "
@@ -1649,9 +1654,13 @@ msgstr "B<DH_VERBOSE>"
 # type: textblock
 #. type: textblock
 #: debhelper.pod:654
+#, fuzzy
+#| msgid ""
+#| "Set to B<1> to enable verbose mode. Debhelper will output every command "
+#| "it runs that modifies files on the build system."
 msgid ""
 "Set to B<1> to enable verbose mode. Debhelper will output every command it "
-"runs that modifies files on the build system."
+"runs. Also enables verbose build logs for some build systems like autoconf."
 msgstr ""
 "Mettre cette variable à B<1> valide le mode verbeux. Debhelper affichera "
 "chaque commande exécutée qui modifie des fichiers."
