--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20140614) UNRELEASED; urgency=medium
+
+  * Add perlapi-* dependency on packages installed to $Config{vendorarch}
+    Closes: #751684
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2014 10:01:24 -0400
+
 debhelper (9.20140613) unstable; urgency=medium
 
   * Pass --disable-silent-rules in dh_auto_configure if DH_VERBOSE is set.
