--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20140614) UNRELEASED; urgency=medium
 
   * Add perlapi-* dependency on packages installed to $Config{vendorarch}
     Closes: #751684
+  * Typo: Closes: #755237
 
  -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2014 10:01:24 -0400
 
