dh_perl: Use vendorlib and vendorarch from Config instead of hardcoding their values. Closes: #750021

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20140614) UNRELEASED; urgency=medium
 
   * Add perlapi-* dependency on packages installed to $Config{vendorarch}
     Closes: #751684
+  * dh_perl: Use vendorlib and vendorarch from Config instead of
+    hardcoding their values. Closes: #750021
   * Typo: Closes: #755237
 
  -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2014 10:01:24 -0400
