--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
-debhelper (9.20140614) UNRELEASED; urgency=medium
+debhelper (9.20140809) unstable; urgency=medium
 
-  * Add perlapi-* dependency on packages installed to $Config{vendorarch}
-    Closes: #751684
+  * dh_perl: Add perlapi-* dependency on packages installed to
+    $Config{vendorarch} Closes: #751684
   * dh_perl: Use vendorlib and vendorarch from Config instead of
     hardcoding their values. Closes: #750021
   * Typo: Closes: #755237
 
- -- Joey Hess <joeyh@debian.org>  Mon, 30 Jun 2014 10:01:24 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 09 Aug 2014 11:24:41 -0400
 
 debhelper (9.20140613) unstable; urgency=medium
 
