add pt translation, currently it breaks the build

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20140810) UNRELEASED; urgency=medium
+
+  * Added Portuguese translation of the man pages, by Américo Monteiro.
+    Closes: #758043
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 13 Aug 2014 13:17:58 -0400
+
 debhelper (9.20140809) unstable; urgency=medium
 
   * dh_perl: Add perlapi-* dependency on packages installed to
