fix build problem

--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -2438,8 +2438,7 @@ msgid ""
 "B<dh_auto_build> [S<I<build system options>>] [S<I<debhelper options>>] "
 "[S<B<--> I<params>>]"
 msgstr ""
-"B<dh_auto_build> [S<I<opções do sistema de compilação>>] [S<I<opções do "
-"debhelper>>] [S<B<--> I<parâmetros>]"
+"B<dh_auto_build> [S<I<opções do sistema de compilação>>] [S<I<opções do debhelper>>] [S<B<--> I<parâmetros>>]"
 
 #. type: textblock
 #: dh_auto_build:18
